--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
+    "xp.css": "^0.3.0",
     "yarn": "^1.22.18"
   },
   "scripts": {
